Google OAuth setup complete, full login logout cycle implemented using encrypted cookies.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/e1337us3r/FeedUp#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.7",
     "nodemon": "^1.18.3",
